<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/periodblock"
    android:orientation="vertical" >

    <TableRow android:layout_width="fill_parent" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/periodTypeYear"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/periodTypeMonth"
            android:textColor="@color/text" />
    </TableRow>

    <TableRow>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/periodYearMinusButton"
                android:layout_width="45dip"
                android:layout_height="40dip"
                android:background="@drawable/period_minus_button"
                android:text="@string/MINUS"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/periodYearEdit"
                android:layout_width="50dip"
                android:layout_height="40dip"
                android:background="@drawable/period_value"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="20" />

            <Button
                android:id="@+id/periodYearPlusButton"
                android:layout_width="45dip"
                android:layout_height="40dip"
                android:background="@drawable/period_pluss_button"
                android:text="@string/PLUSS"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/periodMonthMinusButton"
                android:layout_width="45dip"
                android:layout_height="40dip"
                android:background="@drawable/period_minus_button"
                android:text="@string/MINUS"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/periodMonthEdit"
                android:layout_width="50dip"
                android:layout_height="40dip"
                android:background="@drawable/period_value"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="0" />

            <Button
                android:id="@+id/periodMonthPlusButton"
                android:layout_width="45dip"
                android:layout_height="40dip"
                android:background="@drawable/period_pluss_button"
                android:text="@string/PLUSS"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

</TableLayout>